[tool.poetry]
name = "heavens-gate"
version = "0.1.0"
description = ""
authors = ["CreativeeBlackWolf <maksim271202@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
aiogram = "^3.10.0"
wgconfig = "^1.0.4"
peewee = "^3.17.6"
peewee-migrate = "^1.13.0"
icmplib = "^3.0.4"
loguru = "^0.7.2"
requests = "^2.32.3"
colorama = "^0.4.6"
py3xui = "^0.3.5"
humanize = "^4.12.2"
prometheus-client = "^0.22.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore::UserWarning"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
